--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,10 @@ python:
   - "3.7"
   - "3.8"
 
+cache: pip
 script: pytest
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
